--- a/index.html
+++ b/index.html
@@ -2,8 +2,19 @@
 <html>
 	<head>
 		<link rel="stylesheet" href="main.css">
+		<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
+
 	</head>
 	<body>
+		<div class="row">
+			<div class="col-md-6">
+				<h2>Hi there this is a chunk of text filling up 6 columns</h2>
+			</div>
+			<div class="col-md-6">
+				<h2>Hello this is another chunk of text with 6 columns</h2>
+			</div>
+		</div>
+
 		<h1>Hello World</h1></h1>
 		<div class="italic">
 			<h3>This is my attempt at a HTML tutorial</h3>
