--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
 			</div>
 			<div class="col-md-6">
 				<h2>Hello this is another chunk of text with 6 columns</h2>
+				<button type="button" class="btn btn-primary">Click here!</button>
 			</div>
 		</div>
 
