Add countdown button

--- a/index.html
+++ b/index.html
@@ -13,7 +13,10 @@
 			<div class="col-md-6">
 				<h2>Hello this is another chunk of text with 6 columns</h2>
 				<button type="button" onclick="revealMessage()" class="btn btn-primary">Click here!</button>
-				<p id="hiddenMessage" style="display:none">You found the secret message!</p>
+				<div id="hiddenMessage" style="display:none">
+					<p> You found the secret message!</p>
+					<button id="countDownButton" onclick="countDown()">10</button>
+				</div>
 			</div>
 		</div>
 
