--- a/index.html
+++ b/index.html
@@ -3,9 +3,12 @@
 	<head>
 		<link rel="stylesheet" href="main.css">
 		<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
+		<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
 		<script src="js/script.js"></script>
 	</head>
 	<body>
+
+		<h1 style="text-align:center; color: white;" id="hidden">You found another hidden message!</h1>
 		<div class="row">
 			<div class="col-md-6">
 				<h2>Hi there this is a chunk of text filling up 6 columns</h2>
