--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
 	<body>
 
 		<h1 style="text-align:center; color: white;" id="hidden">You found another hidden message!</h1>
+		<button> Alert me!</button>
 		<div class="row">
 			<div class="col-md-6">
 				<h2>Hi there this is a chunk of text filling up 6 columns</h2>
