--- a/index.html
+++ b/index.html
@@ -4,10 +4,20 @@
 		<link rel="stylesheet" href="main.css">
 		<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
 		<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
+		<script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.5.6/angular.min.js"></script>
 		<script src="js/script.js"></script>
 	</head>
-	<body>
+	<body ng-app="ToDoList">
+		<div ng-controller="MainController">
+			<li> {{ list [0] }}</li>
+			<li> {{ list [1] }}</li>
+			<li> {{ list [2] }}</li>
+		</div>
 
+		<!-- Modules -->
+		<script src="js/app.js"></script>
+		<!-- Controllers -->
+		<script src="js/controllers/MainController.js"></script>
 		<h1 style="text-align:center; color: white;" id="hidden">You found another hidden message!</h1>
 		<button> Alert me!</button>
 		<div class="row">
