Add button that allows users to add items to To-Do list

--- a/index.html
+++ b/index.html
@@ -12,6 +12,8 @@
 			<div ng-repeat="item in list">
 				<li> {{ item }} </li>
 			</div>
+			<input ng-model="addToDo">
+			<button ng-click="addItem()">Add This To-Do</button>
 		</div>
 
 		<!-- Modules -->
